[gd_scene load_steps=9 format=2]

[ext_resource path="res://Textures/drowned.png" type="Texture" id=1]
[ext_resource path="res://Scripts/zombie.gd" type="Script" id=2]
[ext_resource path="res://Objects/jumpLandParticles.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 8 ), Vector2( 8, 9 ), Vector2( 8, 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -5.0, 5.0, 5.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "effect"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 28.312, 39.9865 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 27.75, 39.25 )

[node name="Zombie" type="KinematicBody2D" groups=[
"Zombies",
]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 8, 8 )
texture = ExtResource( 1 )
offset = Vector2( 0.5, -5 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="sprite"]
anims/idle = SubResource( 1 )
anims/walk = SubResource( 2 )

[node name="ColorAnim" type="AnimationPlayer" parent="sprite"]
anims/effect = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.374588, -40.0797 )
shape = SubResource( 4 )

[node name="GroundDetector" type="RayCast2D" parent="."]
position = Vector2( 23.6479, -4.90548 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="jumpLandParticles" parent="." instance=ExtResource( 3 )]

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( -0.25, -39.75 )
shape = SubResource( 5 )

[node name="WallDetector" type="RayCast2D" parent="."]
position = Vector2( 22.0068, -41.0102 )
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 2
